fix(i18n): capture missing strings and add pt-BR translations (#1654)

--- a/quickshell/translations/en.json
+++ b/quickshell/translations/en.json
@@ -6774,6 +6774,12 @@
     "comment": ""
   },
   {
+    "term": "No widgets added. Click \"Add Widget\" to get started.",
+    "context": "No widgets added. Click \"Add Widget\" to get started.",
+    "reference": "Modules/Settings/DesktopWidgetsTab.qml:603",
+    "comment": ""
+  },
+  {
     "term": "No widgets match your search",
     "context": "No widgets match your search",
     "reference": "Modules/Settings/DesktopWidgetBrowser.qml:459",
