--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -7903,6 +7903,13 @@
     "comment": ""
   },
   {
+    "term": "No widgets added. Click \"Add Widget\" to get started.",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "No widgets match your search",
     "translation": "",
     "context": "",
